@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-21T08:31:56Z",
-  "count_outdated" : 2501,
-  "uniques_outdated" : 643,
-  "count" : 2572,
+  "timestamp" : "2022-10-22T02:00:38Z",
+  "count_outdated" : 2503,
+  "uniques_outdated" : 644,
+  "count" : 2573,
   "uniques" : 685,
   "clones" : [
-    {
-      "timestamp": "2022-10-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-09T00:00:00Z",
       "count": 3,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-10-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
