@@ -1,12 +1,7 @@
 {
-  "count": 71,
-  "uniques": 26,
+  "count": 70,
+  "uniques": 25,
   "clones": [
-    {
-      "timestamp": "2022-10-07T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-10-09T00:00:00Z",
       "count": 3,
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2022-10-21T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
