@@ -1,3 +1,11 @@
+2022-10-22T02:00:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3301541765 # 957
+* notice: last 14d: unq all: 25 70
+* notice: prev accum: outdated-unq outdated-all / unq all: 643 2501 / 685 2572
+* notice: next accum: outdated-unq outdated-all / unq all: 644 2503 / 685 2573
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2022-10-07] / [2022-10-21]
+
 2022-10-21T08:31:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3295962212 # 955
 * notice: last 14d: unq all: 26 71
